# OpenGL-Tutorial

./: .clang-format  CMakeLists.txt  Object.h  Shape.h  main.cpp
cmake/: FindGLFW3.cmake
include/: Matrix.h  Object.h  Shape.h  ShapeIndex.h  SolidShape.h  SolidShapeIndex.h  Window.h
shaders/: point.frag  point.vert
src/: main.cpp
